--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,23 @@
 /* Utilities */
 body {
     font-family: 'Work Sans', sans-serif;
+    margin: 0;
 }
 
 /* navigation */
+nav {
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
 .navigation {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.nav {
+    margin-right: 240px;
+    margin-left: 240px;
 }
 
 .nav-title {
@@ -31,6 +41,53 @@ body {
     font-weight: 500;
 }
 
+.navigation-description {
+    display: flex;
+    flex-direction: column;
+}
+
+.navigation-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation-title {
+    font-size: 64px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 50px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.navigation-info p {
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+    text-align: center;
+    margin-bottom: 32px;
+    padding-right: 100px;
+    padding-left: 100px;
+
+}
+
+.navigation-info button {
+    color: #ffffff;
+    background-color: #FF900E;
+    padding: 15px;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 50px;
+
+}
+
+.navigation-banner {
+    width: 100%;
+    overflow: hidden;
+}
+
 /* media queries mobile device */
 @media screen and (max-width: 576px) {
     .navigation {
@@ -39,5 +96,9 @@ body {
 
     .nav-buttons {
         flex-direction: column;
+    }
+
+    .navigation-banner {
+        width: 100%;
     }
 }
