--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ nav {
 .navigation-banner {
     width: 100%;
     overflow: hidden;
+    margin-bottom: 45px;
 }
 
 /* media queries mobile device */
